--- a/main.tex
+++ b/main.tex
@@ -38,6 +38,13 @@
 \chapter{Markov Chains with a Finite Number of States}
 \input{chpts/chpt5.tex}
 
+\chapter{Random Walks on the Lattice $\Z^d$}
+\input{chpts/chpt6.tex}
+
+\chapter{Laws of Large Numbers}
+\input{chpts/chpt7.tex}
+
+
 
 \begin{appendices}
 \chapter{Useful Matrix Lemmas}
