--- a/toc/main.tex
+++ b/toc/main.tex
@@ -99,4 +99,9 @@ Here are a list of things, both theorems and problems, that I think are importan
     \item[\prac] \textit{Prove} the reflection principle.
 \end{itemize}
 
+\section{Laws of Large Numbers}
+\begin{itemize}[nosep]
+    \item 
+\end{itemize}
+
 \end{document}
