--- a/chpts/chpt5.tex
+++ b/chpts/chpt5.tex
@@ -45,7 +45,7 @@
 \end{problem}
 \begin{solution}
     % the only way there can exist a stationary distribution here is if the initial probability at any state is constant which is not possible on the state space Z. Thus, there cannot be a stationary distributino. 
-   We argue that if $\mu$ is a stationary distribution on $\Z$, then it must be that $\mu_i = \mu_j$ for all $i,j \in \Z$. However, if this is the case, then $\sum_{j\in\Z} \mu_j$ either equals $0$ or $\infty$ and cannot equal $1$ since all of the elements of $\mu$ must be nonnegative.  
+   We argue that if $\mu$ is a stationary distribution on $\Z$, then it must be that $\mu_i = \mu_j$ for all $i,j \in \Z$. However, if this is the case, then $\sum_{j\in\Z} \mu_j$ either equals $0$ or $\infty$ and cannot equal $1$ since all of the elements of $\mu$ must be non-negative.  
 \end{solution}
 
 \begin{problem}{5}
