Updates from Overleaf

--- a/chpts/chpt3.tex
+++ b/chpts/chpt3.tex
@@ -116,6 +116,7 @@ Prove that $\eta$ does not have finite expectation.
 \end{solution}
 
 \begin{problem}{7}
+Let $\xi_1,\xi_2,\ldots$ be a sequence of random variables on a probability space $(\Omega, \cF, \PP)$ such that $\Exp{|\xi_n|} \leq 2^{-n}$. Prove that $\xi_n \to 0$ almost surely as $n\to\infty$.
 \end{problem}
 \begin{solution}
      
@@ -164,6 +165,7 @@ Let $F(x)$ be a distribution function. Compute $\int_{-\infty}^\infty F(x+10) - 
 \end{solution}
 
 \begin{problem}{10}
+    Prove that a measure $\eta$ is absolutely continuous with respect to a measure $\mu$ if and only if for any $\epsilon > 0$, there exists $\delta > 0$ such that $\mu(A) < \delta$ implies that $\eta(A) < \epsilon$.
 \end{problem}
 \begin{solution}
 \end{solution}
