--- a/main.tex
+++ b/main.tex
@@ -3,7 +3,7 @@
 \usepackage{lipsum}
 \usepackage[Lenny]{fncychap}
 \input{macros}
-\everymath{\displaystyle}
+%\everymath{\displaystyle}
 \allowdisplaybreaks
 \usepackage{tikz}
 \usepackage{hyperref}
