--- a/macros.tex
+++ b/macros.tex
@@ -230,6 +230,10 @@
 \DeclareMathOperator{\Normal}{\mathcal{N}}
 \DeclareMathOperator{\Id}{Id}
 
+% Measure Theory
+\DeclareMathOperator*{\esssup}{ess\,sup}
+\DeclareMathOperator*{\essinf}{ess\,inf}
+
 
 % Misc commands
 \newcommand{\sgn}{\mathrm{sgn}}
