--- a/toc/main.tex
+++ b/toc/main.tex
@@ -104,4 +104,9 @@ Here are a list of things, both theorems and problems, that I think are importan
     \item 
 \end{itemize}
 
+\section{Weak Convergence and Distribution Functions}
+\begin{itemize}
+    \item 
+\end{itemize}
+
 \end{document}
